# mineria-benchmark

./: .gitignore  README.md  backend.yaml  create_backend.sh  generator.ipynb  generator.py  pyproject.toml  results_analysis.ipynb  run.sh
common/: analysis_utils.py  benchmark_utils.py
ex-duckdb/: main.py  user_data.sh
ex-pandas/: main.py  user_data.sh
ex-pandas/infrastructure/: variables.tf
ex-polars/: main.py  user_data.sh
ex-python/: main.py  test.py  user_data.sh
ex-python/infrastructure/: variables.tf
ex-spark/: main.py  user_data.sh
infrastructure/: README.md  main.tf  provider.tf  user_data.sh  variables.tf
infrastructure/EC2/: backend.yaml  provider.tf  variables.tf
infrastructure/S3/: backend.tf  create_backend.sh  main.tf  variables.tf
