
[project]
name = "mineria-benchmark"
version = "0.1.0"
description = "Benchmark de Python Puro, Pandas, Polars, DuckDB y Spark sobre logs en S3"
requires-python = ">=3.10"

dependencies = [
  "boto3>=1.40.45",
  "s3fs>=2024.5.0",
  "botocore>=1.31",
  "psutil>=5.9",
  "pandas>=2.3.3",
  "pyarrow>=16.0.0",
  "polars>=1.6.0",
  "duckdb>=1.0.0",
  "pyspark>=3.5.1",
  "pytest>=8.1.0",
  "uuid>=1.30",
]

[tool.pytest.ini_options]
pythonpath = [".", "common"]
